# MiniOneRec

./: .gitignore  PROJECT_RUNGUIDE.md  demo_inference.sh  demo_result.json  pyproject.toml  quick_start.sh  rl_laptop.sh  sft.py  sft_laptop.sh  sft_quick_test.sh  sft_ultra_fast.sh
wandb/: latest-run
wandb/run-20260323_201752-569yorza/: run-569yorza.wandb
wandb/run-20260323_201752-569yorza/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260323_203822-xgux18fu/: run-xgux18fu.wandb
wandb/run-20260323_203822-xgux18fu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260323_204032-t7vah11s/: run-t7vah11s.wandb
wandb/run-20260323_204032-t7vah11s/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
