[project]
name = "minionerec"
version = "0.1.0"
description = "A recommender system project using PyTorch and Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # PyTorch ecosystem
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torcheval==0.0.7",
    "torchmetrics==1.0.3",
    "torchrec==0.6.0+cu118",
    "torchsnapshot==0.1.0",
    
    # Transformers & LLM
    "transformers==4.57.1",
    "tokenizers==0.22.1",
    "safetensors==0.6.2",
    
    # Training & Optimization
    "accelerate==1.10.1",
    "deepspeed==0.18.0",
    "bitsandbytes==0.48.1",
    "lightning-utilities==0.11.6",
    "trl==0.24.0",
    
    # Data handling
    "datasets==4.2.0",
    "pandas==2.2.2",
    "numpy==1.26.3",
    "pyarrow==21.0.0",
    "scipy==1.14.0",
    
    # Async & HTTP
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.3.5",
    "aiohttp==3.10.3",
    "aiosignal==1.3.1",
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "requests==2.32.3",
    
    # Utilities
    "fire==0.7.1",
    "hjson==3.1.0",
    "jsonargparse==4.24.1",
    "tqdm==4.67.1",
    "pyyaml==6.0.1",
    "pydantic==2.12.2",
    "click==8.3.0",
    "tabulate==0.9.0",
    "networkx==3.2.1",
    "sympy==1.13.1",
    "mpmath==1.3.0",
    "einops==0.8.0",
    
    # Git & Version
    "gitpython==3.1.45",
    "setuptools-git-versioning==2.0.0",
    
    # Hugging Face
    "huggingface-hub==0.35.3",
    "hf-xet==1.1.10",
    
    # Monitoring & Logging
    "wandb==0.22.2",
    "nvitop==1.5.3",
    "sentry-sdk==2.42.0",
    
    # Image & Serialization
    "pillow==10.2.0",
    "flatbuffers==1.12",
    "msgpack==1.1.2",
    "protobuf==3.19.6",
    "dill==0.4.0",
    
    # System & Environment
    "packaging==24.1",
    "platformdirs==4.5.0",
    "psutil==6.0.0",
    "py-cpuinfo==9.0.0",
    "distro==1.9.0",
    "portalocker==2.10.1",
    "pulsar-client==3.5.0",
    
    # Parsing & Type Checking
    "regex==2025.9.18",
    "typing-extensions==4.15.0",
    "pyre-extensions==0.0.30",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "mypy-extensions==1.0.0",
    
    # Misc
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "idna==3.7",
    "sniffio==1.3.1",
    "urllib3==2.5.0",
    "six==1.16.0",
    "anyio==4.11.0",
    "multidict==6.0.5",
    "frozenlist==1.4.1",
    "xxhash==3.6.0",
    "yarl==1.9.4",
    "zipp==3.20.0",
    "gitdb==4.0.12",
    "smmap==5.0.2",
    "annotated-types==0.7.0",
    "traitlets==5.14.3",
    "decorator==5.1.1",
    "multiprocess==0.70.16",
    "fsspec==2024.2.0",
    "filelock==13.1",
    "iopath==0.1.10",
    "jinja2==3.1.3",
    "markupsafe==2.1.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "tzdata==2024.1",
    "nest-asyncio==1.6.0",
    "h11==0.16.0",
    "pexpect==4.9.0",
    "ptyprocess==0.7.0",
    "pygments==2.18.0",
    "wcwidth==0.2.13",
    "prompt-toolkit==3.0.47",
    "parso==0.8.4",
    "jedi==0.19.1",
    "ipython==8.26.0",
    "stack-data==0.6.3",
    "executing==2.0.1",
    "asttokens==2.4.1",
    "pure-eval==0.2.3",
    "matplotlib-inline==0.1.7",
    "importlib-metadata==8.2.0",
    "pydantic-core==2.41.4",
    "termcolor==3.1.0",
    "triton==3.2.0",
    "ninja==1.11.1.1",
    "nvidia-ml-py==13.580.82",
    "scikit-build==0.18.0",
    "fbgemm-gpu==0.8.0+cu118",
]

[project.optional-dependencies]
# GPU support (already in base dependencies for CUDA 11.8)
# But you can add alternative cuda versions if needed

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.pip]
# Use system CUDA toolkit
compile-bytecode = true
